sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:19: error: 'while' expected but identifier found.
    fin=fin-1
    ^AlgCocktailSort2:23: error: '(' expected but ';' found.
    for (i <- fin to debut by -1) {
^AlgCocktailSort2:44: error: ';' expected but 'while' found.
    } while(na!=0 && nb!=0)
      ^AlgCocktailSort2:48: error: Unmatched closing brace '}' ignored here
}
^